# creolecentric-mcp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
creolecentric_mcp/: __init__.py  cli.py  proxy.py
