[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "creolecentric-mcp"
version = "0.1.1rc1"
description = "Stdio MCP proxy for the CreoleCentric remote MCP server"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "CreoleCentric Labs", email = "support@creolecentric.com" },
]
keywords = ["mcp", "model-context-protocol", "creolecentric", "haitian-creole", "tts"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.2.0",
]

[project.urls]
Homepage = "https://creolecentric.com"
Documentation = "https://creolecentric.com/developer/mcp"
Repository = "https://github.com/Creole-Centric/hat-labs-core"

[project.scripts]
creolecentric-mcp = "creolecentric_mcp.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["creolecentric_mcp*"]
